--- a/generated_submodules/TI10 _ Fixar taxa de Cambio.html
+++ b/generated_submodules/TI10 _ Fixar taxa de Cambio.html
@@ -196,7 +196,7 @@
 </div>
 </div>
 <div class="alert alert-info shadow-sm mb-4">
-<strong>Goal / Objective:</strong> No goal found.</div>
+<strong>Goal / Objective:</strong> Fixar a taxa de câmbio associada a um contrato de swap.</div>
 <!-- Steps -->
 <div class="accordion" id="accordionSteps"><div class="accordion-item"><h2 class="accordion-header" id="heading1"><button class="accordion-button collapsed" data-bs-target="#collapse1" data-bs-toggle="collapse" type="button">Step 1: 1.Acessar o App SAP Fiori</button></h2><div class="accordion-collapse collapse" id="collapse1"><div class="accordion-body"><ul><li>Procedimento:</li><li>Abra  o app Criar ajuste(TI10).</li></ul><img alt="Screenshot" class="img-fluid rounded mb-3" src="images\image 43.png"/><div></div></div></div></div><div class="accordion-item"><h2 class="accordion-header" id="heading2"><button class="accordion-button collapsed" data-bs-target="#collapse2" data-bs-toggle="collapse" type="button">Step 2: 2. Entrada de dados do lançamento</button></h2><div class="accordion-collapse collapse" id="collapse2"><div class="accordion-body"><ul><li>Procedimento:</li><li>Tipo de reajuste:Ajuste de taxa de câmbio</li><li>Empresa:Exemplo:1000</li><li>Transação:Exemplo:4000000000042</li><li>Clicar emENTRAR.</li><li>Procedimento:</li><li>Verificar a data na qual está sendo realizada o ajuste.</li><li>Taxa de Câmbio:Exemplo:5,7908.</li><li>Clicar emGRAVAR.</li></ul><img alt="Screenshot" class="img-fluid rounded mb-3" src="images\image 44.png"/><div></div></div></div></div></div>
 <!-- Notes -->
